# cv_ssu

./: .gitignore  pyproject.toml
classification/: finetune_pred.json  predictions.json  resnet_classification.py  train_resnet_classification.py  unfreze_pred.json  zero_classification.py
drop_duplicates/: drop_duplicates.py
dynamic_range/: research.py
find_by_image/: find_by_image.py
find_by_text/: find_by_text.py  find_by_text_2.py
find_similarity/: find_similarity.py
paste_to_image/: paste_to_image.py
remove_background/: remove_backgroung.py
